--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,5 +10,4 @@ git = "https://github.com/carllerche/mio"
 
 [dependencies]
 tokio = { version = "1.24.2", features = ["full"] }
-tokio-tungstenite = "*"
-tungstenite = "*"
+warp = "*"
